Create User Login/Register View fix images and css order

--- a/MoanaSoftwareTrello/MoanaSoftwareTrello.csproj
+++ b/MoanaSoftwareTrello/MoanaSoftwareTrello.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\" />
+    <None Include="wwwroot\images\login-bg.jpg" />
   </ItemGroup>
 
 </Project>
